@@ -14,17 +14,17 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 285f6f1100bac0b59048054102a5073ba187145c ChangeLog
+SHA1 23121b102a4fbdb28c9880f6e7b33e47d99cdfc8 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 d910f2158f397101c20143f72890951dbff888b5 MANIFEST
-SHA1 d22080e0912358198ed60890293043499151cc2a META.yml
-SHA1 2b804713bbf200bcc6465d8d1411a0cb216d2f64 MYMETA.json
-SHA1 87692a424cd603b360e4a84b6585eee1588fdcc5 MYMETA.yml
-SHA1 d03dabd128f715c49d23fa5a093c86dfa0801c08 Makefile.PL
+SHA1 94a9e947b92a62a52ad83c663dcd21034a696620 META.yml
+SHA1 37e75158cddbb4d1bb9fe4fcd262e65ca62bed82 MYMETA.json
+SHA1 120686d73997802038f6a11bdcbd30b496e57175 MYMETA.yml
+SHA1 81f8356fda1ae3c61e9b0802b1e74f1b797332b5 Makefile.PL
 SHA1 38228eb2b6a24938b795a73e324f9f51a2a13756 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 6671adf9bf15b05200f2eb0ce2ac8b257a9e6050 bin/fullauto.pl
-SHA1 6da7a3722ec9dccb9b4e8d71b67eea7d77ad6632 bin/install_mozrepl_plugin.exe
+SHA1 e7597f2c7bab49174bbe597b575bc29f987af7f1 bin/install_mozrepl_plugin.exe
 SHA1 20c73697e1713638140c719d8eaa19a275ed43a5 inc/Module/AutoInstall.pm
 SHA1 7305dbe2904416e28decb05396988a5d51d578be inc/Module/Install.pm
 SHA1 1549721e44d5fc5a9ad4d9cbf39e78c2ba4388d4 inc/Module/Install/Admin.pm
@@ -38,8 +38,8 @@ SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 16eb2bcf54836bf417e2c5d9972e2fbd1ea4744b install_mozrepl_plugin.ahk
-SHA1 364f367b89c4fe715f859443714002fc51ad2451 lib/Net/FullAuto.pm
+SHA1 225dc1fa8a31e86954f43fb8e6a2060c9c54e6f8 install_mozrepl_plugin.ahk
+SHA1 6c358501bcbfc3a36c6f24376da852739e47f40d lib/Net/FullAuto.pm
 SHA1 da4cad3f90b32301fad4f5a910b67b37c5105b49 lib/Net/FullAuto/Custom/BackUp/README
 SHA1 966d316495dc2c924ba00e0eaa065391a8c967c5 lib/Net/FullAuto/Custom/README
 SHA1 931b73137675e23ff80148d72aa09415fdb164af lib/Net/FullAuto/Distro/fa_code.pm
@@ -56,7 +56,7 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.12 (Cygwin)
 
-iEYEARECAAYFAlEStwIACgkQJM3IZYB6aOogpwCgn/gfwGSx4T6U2HUylFJimbkA
-jsMAniEQ/A0YutmWJqKJ8okxD1FEor+q
-=wxzY
+iEYEARECAAYFAlEUio0ACgkQJM3IZYB6aOrExACeKq9kSLuIO3QAmeIWoIyHoifF
+uCgAoKbG/aSB2r9eJrPnyOD2+U19p8RL
+=+tUa
 -----END PGP SIGNATURE-----
