@@ -21,7 +21,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.999989';
+our $VERSION='0.999990';
 
 
 use 5.005;
